[metadata]
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: BSD 1-clause
    Intended Audience :: Web Developers
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Framework :: AsyncIO
description='Tox ctypes wrapping into Python',
long_description='Tox ctypes wrapping of c-toxcore into Python3',
url='https://git.plastiras.org/emdee/toxygen_wrapper/',
keywords='ctypes Tox messenger',
author='Ingvar',

[options]
zip_safe = false
python_requires = ~=3.6
include_package_data = false
install_requires =
    ctypes
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    tox_wrapper_tests = tox_wrapper.tests_wrapper:main

[easy_install]
zip_ok = false

[flake8]
jobs = 1
max-line-length = 88
ignore =
    E111
    E114
    E128
    E225
    E261
    E302
    E305
    E402
    E501
    E502
    E541
    E701
    E702
    E704
    E722
    E741
    F508
    F541
    W503
    W601
