[metadata]
classifiers =
    License :: OSI Approved
    Intended Audience :: Web Developers
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
description='Tox ctypes wrapping into Python'
long_description='Tox ctypes wrapping of c-toxcore into Python3'
url='https://git.plastiras.org/emdee/toxygen_wrapper/'
keywords='ctypes Tox messenger'
 
[options]
zip_safe = false
python_requires = >=3.6
package_dir=
    =src
packages = ["toxygen_wrapper", "toxygen_wrapper.tests"]
include_package_data =
    "*" = ["*.txt"]
install_requires =
    coloredlogs

[easy_install]
zip_ok = false

[flake8]
jobs = 1
max-line-length = 88
ignore =
    E111
    E114
    E128
    E225
    E261
    E302
    E305
    E402
    E501
    E502
    E541
    E701
    E702
    E704
    E722
    E741
    F508
    F541
    W503
    W601
